digests refactoring WIP

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "aiofiles",
+        "apscheduler",
         "asyncio",
         "beautifulsoup",
         "dateutil",
