--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,3 +29,7 @@ strict_optional = true
 [[tool.mypy.overrides]]
 module = ["feedparser.*"]
 ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = ["apscheduler.*"]
+ignore_missing_imports = true
