--- a/TelegramDigest.Application/TelegramDigest.Application.csproj
+++ b/TelegramDigest.Application/TelegramDigest.Application.csproj
@@ -1,15 +1,34 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
+<!--  <PropertyGroup>-->
+<!--    <OutputType>Library</OutputType>-->
+<!--  </PropertyGroup>-->
+<!--  <PropertyGroup>-->
+<!--    <TargetFramework>net9.0</TargetFramework>-->
+<!--    <ImplicitUsings>enable</ImplicitUsings>-->
+<!--    <Nullable>enable</Nullable>-->
+<!--  </PropertyGroup>-->
+
+  <ItemGroup>
+    <Using Include="Microsoft.Extensions.Configuration" />
+    <Using Include="Microsoft.Extensions.Logging" />
+    <Using Include="Microsoft.EntityFrameworkCore" />
+  </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="FluentResults" Version="3.16.0" />
+    <PackageReference Include="JetBrains.Annotations" Version="2024.3.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.1">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.1" />
+    <PackageReference Include="OneOf" Version="3.0.271" />
     <PackageReference Include="OpenAI" Version="2.1.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="7.2.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="7.2.0" />
     <PackageReference Include="System.ServiceModel.Syndication" Version="9.0.1" />
   </ItemGroup>
 </Project>
