fix: code style, naming etc

--- a/TelegramDigest.Application.Tests/TelegramDigest.Application.Tests.csproj
+++ b/TelegramDigest.Application.Tests/TelegramDigest.Application.Tests.csproj
@@ -16,4 +16,8 @@
         <Using Include="NUnit.Framework"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="UnitTests\" />
+    </ItemGroup>
+
 </Project>
