feat: front draft created, MainServiceClient.cs implemented

--- a/TelegramDigest.Web/TelegramDigest.Web.csproj
+++ b/TelegramDigest.Web/TelegramDigest.Web.csproj
@@ -4,4 +4,8 @@
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\TelegramDigest.Application\TelegramDigest.Application.csproj" />
+    </ItemGroup>
+
 </Project>
