refactor: Application -> Backend renaming

--- a/TelegramDigest.API/TelegramDigest.API.csproj
+++ b/TelegramDigest.API/TelegramDigest.API.csproj
@@ -7,7 +7,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\TelegramDigest.Application\TelegramDigest.Application.csproj" />
+      <ProjectReference Include="..\TelegramDigest.Backend\TelegramDigest.Backend.csproj" />
     </ItemGroup>
 
 </Project>
