--- a/TelegramDigest.Backend.Tests/TelegramDigest.Backend.Tests.csproj
+++ b/TelegramDigest.Backend.Tests/TelegramDigest.Backend.Tests.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <IsPackable>false</IsPackable>
+        <RootNamespace>TelegramDigest.Application.Tests</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
