--- a/TelegramDigest.Web/TelegramDigest.Web.csproj
+++ b/TelegramDigest.Web/TelegramDigest.Web.csproj
@@ -8,4 +8,10 @@
       <ProjectReference Include="..\TelegramDigest.Backend\TelegramDigest.Backend.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="Pages\Channels\Index.cshtml" />
+      <_ContentIncludedByDefault Remove="Pages\Digest\Index.cshtml" />
+      <_ContentIncludedByDefault Remove="Pages\Digests\Index.cshtml" />
+    </ItemGroup>
+
 </Project>
