refactor: Add Endpoint to OpenAI settings, use Host from separate project

--- a/TelegramDigest.Backend.Tests/TelegramDigest.Backend.Tests.csproj
+++ b/TelegramDigest.Backend.Tests/TelegramDigest.Backend.Tests.csproj
@@ -18,7 +18,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="UnitTests\" />
+      <ProjectReference Include="..\TelegramDigest.HostHandler\TelegramDigest.HostHandler.csproj" />
     </ItemGroup>
 
 </Project>
