cleanup in deployment options and fix logging

--- a/TelegramDigest.Web/appsettings.json
+++ b/TelegramDigest.Web/appsettings.json
@@ -1,12 +1,11 @@
 {
+  "MAX_CONCURRENT_AI_TASKS": 2,
+  "SQL_LITE_CONNECTION_STRING": "Data Source=runtime/telegram-digest.db",
+  "BASEPATH": "/",
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Warning"
     }
-  },
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=runtime/telegram-digest.db"
   },
   "AllowedHosts": "*"
 }
