dockerized and less logs

--- a/TelegramDigest.Web/appsettings.json
+++ b/TelegramDigest.Web/appsettings.json
@@ -4,7 +4,9 @@
   "BASEPATH": "/",
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Information",
+      "Microsoft.EntityFrameworkCore": "Warning",
+      "Microsoft.AspNetCore": "Warning"
     }
   },
   "AllowedHosts": "*"
