extract TELEGRAM_RSS_BASE_URL from reader to BackendDeploymentOptions

--- a/TelegramDigest.Web/appsettings.json
+++ b/TelegramDigest.Web/appsettings.json
@@ -1,6 +1,7 @@
 {
   "MAX_CONCURRENT_AI_TASKS": 2,
   "SQL_LITE_CONNECTION_STRING": "Data Source=runtime/telegram-digest.db",
+  "TELEGRAM_RSS_BASE_URL": "https://rsshub.app/telegram/channel",
   "BASEPATH": "/",
   "Logging": {
     "LogLevel": {
