add new launch configuration for file-based rss channelsˆ

--- a/TelegramDigest.Web/Properties/launchSettings.json
+++ b/TelegramDigest.Web/Properties/launchSettings.json
@@ -10,6 +10,16 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
+    "http_with_file_tg_rss": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": false,
+      "applicationUrl": "http://localhost:5110",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "TELEGRAM_RSS_BASE_URL": "file:///Users/user1/Desktop"
+      }
+    },
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
