--- a/TelegramDigest.Backend/TelegramDigest.Backend.csproj
+++ b/TelegramDigest.Backend/TelegramDigest.Backend.csproj
@@ -23,7 +23,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\TelegramDigest.HostHandler\TelegramDigest.HostHandler.csproj" />
+      <ProjectReference Include="..\TelegramDigest.Types.Host\TelegramDigest.Types.Host.csproj" />
     </ItemGroup>
 
     <ItemGroup>
