--- a/TelegramDigest.Web/appsettings.json
+++ b/TelegramDigest.Web/appsettings.json
@@ -2,6 +2,7 @@
   "MAX_CONCURRENT_AI_TASKS": 2,
   "SQL_LITE_CONNECTION_STRING": "Data Source=runtime/telegram-digest.db",
   "TELEGRAM_RSS_BASE_URL": "https://rsshub.app/telegram/channel",
+  "SETTINGS_FILE_PATH": "runtime/settings.json",
   "BASEPATH": "/",
   "Logging": {
     "LogLevel": {
