frontend: replaced channels with feeds

--- a/TelegramDigest.Web/TelegramDigest.Web.csproj
+++ b/TelegramDigest.Web/TelegramDigest.Web.csproj
@@ -12,4 +12,8 @@
       <_ContentIncludedByDefault Remove="wwwroot\lib\autosize\src\autosize.js" />
     </ItemGroup>
 
+    <ItemGroup>
+      <AdditionalFiles Include="Pages\Feeds\Index.cshtml" />
+    </ItemGroup>
+
 </Project>
