--- a/TelegramDigest.Backend/TelegramDigest.Backend.csproj
+++ b/TelegramDigest.Backend/TelegramDigest.Backend.csproj
@@ -19,7 +19,9 @@
         <PackageReference Include="FluentResults" Version="3.16.0"/>
         <PackageReference Include="OneOf" Version="3.0.271"/>
         <PackageReference Include="OpenAI" Version="2.1.0"/>
-        <PackageReference Include="JetBrains.Annotations" Version="2024.3.0"/>
+        <PackageReference Include="JetBrains.Annotations"/>
+        <PackageReference Include="Fody" PrivateAssets="all" />
+        <PackageReference Include="RuntimeNullables.Fody" />
     </ItemGroup>
 
     <ItemGroup>
