--- a/TelegramDigest.Types.Host/TelegramDigest.Types.Host.csproj
+++ b/TelegramDigest.Types.Host/TelegramDigest.Types.Host.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk" >
     <ItemGroup>
-        <PackageReference Include="Fody" PrivateAssets="all" />
-        <PackageReference Include="RuntimeNullables.Fody" />
+        <PackageReference Include="Fody" Version="6.9.2" />
+        <PackageReference Include="RuntimeNullables.Fody" Version="2.0.0" />
     </ItemGroup>
 </Project>
