--- a/TelegramDigest.Backend/TelegramDigest.Backend.csproj
+++ b/TelegramDigest.Backend/TelegramDigest.Backend.csproj
@@ -21,7 +21,7 @@
         <PackageReference Include="OpenAI" Version="2.1.0"/>
         <PackageReference Include="JetBrains.Annotations" Version="2024.3.0" />
         <PackageReference Include="Fody" Version="6.9.2" />
-        <PackageReference Include="RuntimeNullables.Fody" Version="2.0.0" />
+        <PackageReference Include="RuntimeNullables.Fody" Version="2.0.0" PrivateAssets="all" />
     </ItemGroup>
 
     <ItemGroup>
