--- a/TelegramDigest.Web.Tests/TelegramDigest.Web.Tests.csproj
+++ b/TelegramDigest.Web.Tests/TelegramDigest.Web.Tests.csproj
@@ -6,6 +6,8 @@
         <PackageReference Include="NUnit" Version="4.2.2"/>
         <PackageReference Include="NUnit.Analyzers" Version="4.4.0"/>
         <PackageReference Include="NUnit3TestAdapter" Version="4.6.0"/>
+        <PackageReference Include="FluentAssertions" Version="8.3.0" />
+        <PackageReference Include="FluentAssertions.Analyzers" Version="0.34.1" />
     </ItemGroup>
 
     <ItemGroup>
