--- a/TelegramDigest.Web/TelegramDigest.Web.csproj
+++ b/TelegramDigest.Web/TelegramDigest.Web.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
     
     <ItemGroup>
+        <PackageReference Include="FluentResults" Version="3.16.0" />
         <PackageReference Include="Fody" PrivateAssets="all" />
         <PackageReference Include="RuntimeNullables.Fody" />
     </ItemGroup>
