sealed class warnings

--- a/.editorconfig
+++ b/.editorconfig
@@ -5,6 +5,15 @@
 resharper_braces_for_ifelse = required
 resharper_enforce_if_statement_braces_highlighting = hint
 
-# Ban classic assertions, use fluent instead
 [*.cs]
+
+# Ban classic assertions, use fluent instead
 dotnet_diagnostic.FAA0004.severity = error
+
+# Enforce sealed classes
+dotnet_diagnostic.MA0053.severity = warning
+MA0053.public_class_should_be_sealed = true
+MA0053.exceptions_should_be_sealed = true
+
+[**/Migrations/*.cs]
+dotnet_diagnostic.MA0053.severity = none
