simplify deployment options in front

--- a/TelegramDigest.Web/appsettings.json
+++ b/TelegramDigest.Web/appsettings.json
@@ -3,6 +3,7 @@
   "SQL_LITE_CONNECTION_STRING": "Data Source=runtime/telegram-digest.db",
   "SETTINGS_FILE_PATH": "runtime/settings.json",
   "BASEPATH": "/",
+  "HOSTNAME": "foo",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
