--- a/TelegramDigest.Web/default_options.env
+++ b/TelegramDigest.Web/default_options.env
@@ -4,7 +4,7 @@ DIGEST_SUMMARY_SYSTEM_PROMPT="You are a summarizer of big digests. Use english l
 MAX_CONCURRENT_AI_TASKS="2"
 SQL_LITE_CONNECTION_STRING="Data Source=runtime/telegram-digest.db"
 BASEPATH="/"
-HOSTNAME="foo"
+SINGLE_USER_MODE="true"
 TG_RSS_PROVIDERS='
 [
   {
