--- a/TelegramDigest.Backend/TelegramDigest.Backend.csproj
+++ b/TelegramDigest.Backend/TelegramDigest.Backend.csproj
@@ -1,24 +1,25 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <ItemGroup>
-        <Using Include="Microsoft.Extensions.Configuration"/>
-        <Using Include="Microsoft.Extensions.Logging"/>
-        <Using Include="Microsoft.EntityFrameworkCore"/>
+        <Using Include="Microsoft.Extensions.Configuration" />
+        <Using Include="Microsoft.Extensions.Logging" />
+        <Using Include="Microsoft.EntityFrameworkCore" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1"/>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.1"/>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.1"/>
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.1"/>
-        <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.1"/>
-        <PackageReference Include="Microsoft.Extensions.Options.DataAnnotations" Version="9.0.1"/>
-        <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.1"/>
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.1"/>
-        <PackageReference Include="System.ServiceModel.Syndication" Version="9.0.1"/>
-        <PackageReference Include="FluentResults" Version="3.16.0"/>
-        <PackageReference Include="OneOf" Version="3.0.271"/>
-        <PackageReference Include="OpenAI" Version="2.1.0"/>
+        <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.1" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.1" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.1" />
+        <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.1" />
+        <PackageReference Include="Microsoft.Extensions.Options.DataAnnotations" Version="9.0.1" />
+        <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.1" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.1" />
+        <PackageReference Include="System.ServiceModel.Syndication" Version="9.0.1" />
+        <PackageReference Include="FluentResults" Version="3.16.0" />
+        <PackageReference Include="OneOf" Version="3.0.271" />
+        <PackageReference Include="OpenAI" Version="2.1.0" />
         <PackageReference Include="JetBrains.Annotations" Version="2024.3.0" />
         <PackageReference Include="Fody" Version="6.9.2" />
         <PackageReference Include="RuntimeNullables.Fody" Version="2.0.0" PrivateAssets="all" />
