--- a/TelegramDigest.Backend.Tests/TelegramDigest.Backend.Tests.csproj
+++ b/TelegramDigest.Backend.Tests/TelegramDigest.Backend.Tests.csproj
@@ -1,27 +1,23 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
     <PropertyGroup>
         <IsPackable>false</IsPackable>
     </PropertyGroup>
-
     <ItemGroup>
-        <PackageReference Include="coverlet.collector" Version="6.0.2"/>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0"/>
+        <PackageReference Include="coverlet.collector" Version="6.0.2" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.6" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
         <PackageReference Include="Moq" Version="4.20.72" />
-        <PackageReference Include="NUnit" Version="4.2.2"/>
-        <PackageReference Include="NUnit.Analyzers" Version="4.4.0"/>
-        <PackageReference Include="NUnit3TestAdapter" Version="4.6.0"/>
+        <PackageReference Include="NUnit" Version="4.2.2" />
+        <PackageReference Include="NUnit.Analyzers" Version="4.4.0" />
+        <PackageReference Include="NUnit3TestAdapter" Version="4.6.0" />
         <PackageReference Include="FluentAssertions" Version="8.3.0" />
         <PackageReference Include="FluentAssertions.Analyzers" Version="0.34.1" />
     </ItemGroup>
-
     <ItemGroup>
-        <Using Include="NUnit.Framework"/>
+        <Using Include="NUnit.Framework" />
     </ItemGroup>
-
     <ItemGroup>
-      <ProjectReference Include="..\TelegramDigest.Backend\TelegramDigest.Backend.csproj" />
-      <ProjectReference Include="..\TelegramDigest.Types.Host\TelegramDigest.Types.Host.csproj" />
+        <ProjectReference Include="..\TelegramDigest.Backend\TelegramDigest.Backend.csproj" />
+        <ProjectReference Include="..\TelegramDigest.Types.Host\TelegramDigest.Types.Host.csproj" />
     </ItemGroup>
-
 </Project>
