--- a/TelegramDigest.Backend/TelegramDigest.Backend.csproj
+++ b/TelegramDigest.Backend/TelegramDigest.Backend.csproj
@@ -1,11 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
     <ItemGroup>
         <Using Include="Microsoft.Extensions.Configuration" />
         <Using Include="Microsoft.Extensions.Logging" />
         <Using Include="Microsoft.EntityFrameworkCore" />
     </ItemGroup>
-
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
@@ -23,13 +21,14 @@
         <PackageReference Include="JetBrains.Annotations" Version="2024.3.0" />
         <PackageReference Include="Fody" Version="6.9.2" />
         <PackageReference Include="RuntimeNullables.Fody" Version="2.0.0" PrivateAssets="all" />
-        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.1" />
+        <PackageReference
+            Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore"
+            Version="9.0.1"
+        />
     </ItemGroup>
-
     <ItemGroup>
-      <ProjectReference Include="..\TelegramDigest.Types.Host\TelegramDigest.Types.Host.csproj" />
+        <ProjectReference Include="..\TelegramDigest.Types.Host\TelegramDigest.Types.Host.csproj" />
     </ItemGroup>
-
     <ItemGroup>
         <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
             <_Parameter1>TelegramDigest.Backend.Tests</_Parameter1>
