--- a/TelegramDigest.Web/TelegramDigest.Web.csproj
+++ b/TelegramDigest.Web/TelegramDigest.Web.csproj
@@ -1,39 +1,33 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
     <PropertyGroup>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
-    
     <ItemGroup>
         <PackageReference Include="DotNetEnv" Version="3.1.1" />
         <PackageReference Include="FluentResults" Version="3.16.0" />
         <PackageReference Include="Fody" Version="6.9.2" />
         <PackageReference Include="RuntimeNullables.Fody" Version="2.0.0" PrivateAssets="all" />
     </ItemGroup>
-
     <ItemGroup>
-      <ProjectReference Include="..\TelegramDigest.Backend\TelegramDigest.Backend.csproj" />
+        <ProjectReference Include="..\TelegramDigest.Backend\TelegramDigest.Backend.csproj" />
     </ItemGroup>
-
     <ItemGroup>
-      <_ContentIncludedByDefault Remove="wwwroot\lib\autosize\src\autosize.js" />
+        <_ContentIncludedByDefault Remove="wwwroot\lib\autosize\src\autosize.js" />
     </ItemGroup>
-
     <ItemGroup>
-      <AdditionalFiles Include="Pages\Feeds\Index.cshtml" />
+        <AdditionalFiles Include="Pages\Feeds\Index.cshtml" />
     </ItemGroup>
-
     <Target Name="NpmInstall" BeforeTargets="Build" Condition=" !Exists('node_modules') ">
         <Exec Command="npm install" />
     </Target>
-
     <Target Name="FrontendBuild" AfterTargets="Build">
         <Exec Command="npm run build" />
         <ItemGroup>
             <DistFiles Include="wwwroot/build/**" />
         </ItemGroup>
-        <Copy SourceFiles="@(DistFiles)"
-              DestinationFolder="$(PublishDir)wwwroot\build\%(RecursiveDir)" />
+        <Copy
+            SourceFiles="@(DistFiles)"
+            DestinationFolder="$(PublishDir)wwwroot\build\%(RecursiveDir)"
+        />
     </Target>
-
 </Project>
