--- a/TelegramDigest.Web/TelegramDigest.Web.csproj
+++ b/TelegramDigest.Web/TelegramDigest.Web.csproj
@@ -6,6 +6,10 @@
         <PackageReference Include="DotNetEnv" Version="3.1.1" />
         <PackageReference Include="FluentResults" Version="3.16.0" />
         <PackageReference Include="Fody" Version="6.9.2" />
+        <PackageReference
+            Include="Microsoft.AspNetCore.Authentication.OpenIdConnect"
+            Version="9.0.6"
+        />
         <PackageReference Include="RuntimeNullables.Fody" Version="2.0.0" PrivateAssets="all" />
     </ItemGroup>
     <ItemGroup>
