--- a/TelegramDigest.Web/default_options.env
+++ b/TelegramDigest.Web/default_options.env
@@ -5,6 +5,8 @@ MAX_CONCURRENT_AI_TASKS="2"
 SQL_LITE_CONNECTION_STRING="Data Source=runtime/telegram-digest.db"
 BASEPATH="/"
 SINGLE_USER_MODE="true"
+SINGLE_USER_ID="00000000-0000-0000-0000-000000000000"
+SINGLE_USER_EMAIL="email@example.com"
 TG_RSS_PROVIDERS='
 [
   {
