--- a/TelegramDigest.Backend.Tests/TelegramDigest.Backend.Tests.csproj
+++ b/TelegramDigest.Backend.Tests/TelegramDigest.Backend.Tests.csproj
@@ -18,6 +18,6 @@
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\TelegramDigest.Backend\TelegramDigest.Backend.csproj" />
-        <ProjectReference Include="..\TelegramDigest.Types.Host\TelegramDigest.Types.Host.csproj" />
+        <ProjectReference Include="..\TelegramDigest.Shared\TelegramDigest.Shared.csproj" />
     </ItemGroup>
 </Project>
